# olio-ohjelmointi

h1/: main.cpp
h2a/: CMakeLists.txt  Car.cpp  Car.h  Rectangle.cpp  Rectangle.h  Student.cpp  Student.h  main.cpp
h2b/: CMakeLists.txt  Car.cpp  Car.h  main.cpp
h3a/: Chef.cpp  Chef.h  ItalianChef.cpp  ItalianChef.h  main.cpp
h3b/: Animal.cpp  Animal.h  Dog.cpp  Dog.h  main.cpp
h4/: CMakeLists.txt  Cap.cpp  Car.h  Engine.cpp  Engine.h  Wheel.cpp  Wheel.h  main.cpp
h5/: CMakeLists.txt  ClassA1.h  ClassA2.h  ClassB.cpp  ClassB.h  main.cpp
h6a/: CMakeLists.txt  main.cpp  myclass.cpp
h6b/: CMakeLists.txt  exampleclass.cpp  main.cpp
h7/: mainwindow.cpp  mainwindow.h  mainwindow.ui
